--- a/index.html
+++ b/index.html
@@ -1,12 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Onlayn kitob dokon</title>
+    <link rel="icon" type="image/x-icon" href="./img/book.svg">
 </head>
+
 <body>
-    
+    <div class="container">
+
+        <header class="sitx__hedader">
+            <div class="container header__conta">
+                <div class="container header__container">
+                    <div class="header__ico">
+                        <a href="./index.html">
+                            <img src="./img/icock.svg" alt="lionk">
+                        </a>
+                    </div>
+                    <div class="header__input">
+                        <img class="header__search" src="./img/search.png" alt="search">
+                        <input type="text" id="sarche" placeholder="Search books">
+                    </div>
+                    <div class="header__darc">
+                        <div>
+                            <img class="header__mode" src="./img/Vector.svg" alt="img">
+                        </div>
+                        <div class="logo">
+                            <button class=" btn header__logo">Logout</button>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="container header__showing">
+                    <div>
+                        <h2 class="header__text">
+                            Showing 18 Result(s)
+                        </h2>
+                    </div>
+                    <div>
+                        <button class="header__Order">
+                            Order by newest
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main class="main">
+            <section class="main__section">
+                <div class="container">
+                    <div>
+                        <h3 class="book">
+                            Bookmarks
+                        </h3>
+                        <p class="main__section__text">
+                            If you don’t like to read, you haven’t found the right book
+                        </p>
+                    </div>
+                    <ul class="main__section__sitey">
+                        <li class="item">
+                            <div>
+                                <p class="item__text">Python</p>
+                                <p class="item__name">David M. Beazley</p>
+                            </div>
+                            <div>
+                                <img class="img" src="./img/boock.png" alt="boock">
+                                <img class="img" src="./img/delete.png" alt="delit">
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div>
+                                <p class="item__text">Java</p>
+                                <p class="item__name">David M. Beazley</p>
+                            </div>
+                            <div>
+                                <img class="img" src="./img/boock.png" alt="boock">
+                                <img class="img" src="./img/delete.png" alt="delit">
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div>
+                                <p class="item__text">C++</p>
+                                <p class="item__name">David M. Beazley</p>
+                            </div>
+                            <div>
+                                <img class="img" src="./img/boock.png" alt="boock">
+                                <img class="img" src="./img/delete.png" alt="delit">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="main__section2">
+                <div class="container">
+                    <ul class="cretElement" id="cretElement">
+
+                    </ul>
+                </div>
+            </section>
+        </main>
+    </div>
+    <template id="product-template">
+        <li class="main__cretElement">
+            <div class="main__cretElement__img">
+                <img id="book__img" src="./img/boock.png" alt="book">
+            </div>
+            <div class="main__inner">
+                <h2 id="cretElement__inner" class="cretElement__inner">Python</h2>
+                <p id="cretElement__taxt" class="cretElement__taxt">David M. Beazley</p>
+                <p id="cretElement__namber" class="cretElement__namber">2009</p>
+            </div>
+            <div class="main__btn">
+                <div class="main__btn__more">
+                    <button class="main__bookmark">Bookmark</button>
+                    <button class="main__more btn-primary" id="info__btn" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">More Info</button>
+
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+                        aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasRightLabel">Python<h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                        aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <div class="info__img_inner">
+                                <img class="info__img" id="info__img" src="./img/Login.png" alt="boock">
+                            </div>
+                            <div>
+                                <p class="info__taxt" id="info__taxt">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Veritatis
+                                    magnam ad ea non iure culpa quaerat cumque sequi at unde blanditiis velit, impedit
+                                    eos
+                                    voluptas explicabo fugit laborum eaque nemo.</p>
+                            </div>
+                            <div>
+                                <h2 class="info__inner">
+                                    Author : <span class="info__span" id="span">Jamal Kasper</span>
+                                    <span class="info__span">Author 2</span>
+                                </h2>
+                                <h2 class="info__inner">
+                                    Published : <span class="info__span" id="info__namer">2019</span>
+                                </h2>
+                                <h2 class="info__inner">
+                                    Publishers: <span class="info__span" id="publishers">Hollman</span>
+                                </h2>
+                                <h2 class="info__inner" >
+                                    Categories: <span id="categories" class="info__span">Computers</span>
+                                </h2>
+                                <h2 class="info__inner" id="pages">
+                                    Pages Count: <span id="pages" class="info__span">346</span>
+                                </h2>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <button class="main__read">Read</button>
+            </div>
+        </li>
+    </template>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="./js/findElement.js"></script>
+    <script src="./js/radom.js"></script>
+    <script src="./js/infoRadom.js"></script>
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
