--- a/index.html
+++ b/index.html
@@ -180,12 +180,13 @@
                 <p class="item__text" id="item__text">Python</p>
                 <p class="item__name" id="item__name">David M. Beazley</p>
             </div>
-            <div>
+            <div id="main__delit__img">
                 <img class="img" id="img" src="./img/boock.png" alt="boock">
                 <img id="imgen" class="img" src="./img/delete.png" alt="delit">
             </div>
         </li>
     </template>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -195,9 +196,9 @@
     <script src="./js/infoRadom.js"></script>
     <script src="./js/bookmar.js"></script>
     <script src="./js/darkMod.js"></script>
+    <script src="./js/selekt.js"></script>
     <script type="module" src="./js/sivper.js"></script>
     <script type="module" src="./js/main.js"></script>
-    <script src="./js/selekt.js"></script>
 </body>
 
 </html>
