--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <img class="header__mode" id="sun" src="./img/Vector.svg" alt="sun">
                         </div>
                         <div class="logo">
-                            <button class=" btn header__logo">Logout</button>
+                            <button class=" header__logo">Logout</button>
                         </div>
                     </div>
                 </div>
