--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             <img class="user" src="./img/lock.png" alt="user">
             <input class="input password" id="password" type="password" placeholder="password">
         </div>
-        <p class="error-message" id="error-message">xato</p>
+        <p class="error-message" id="error-message"></p>
         <button class="input__btn" id="submit-btn">Login</button>
     </div>
 </div>
