--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                             <img class="header__mode" id="mon" src="./img/mon.svg" alt="mon">
                             <img class="header__mode" id="sun" src="./img/Vector.svg" alt="sun">
                         </div>
+                        <a href="./addimin.html">admin</a>
                         <div class="logo">
                             <button class=" header__logo">Logout</button>
                         </div>
