--- a/addimin.html
+++ b/addimin.html
@@ -14,6 +14,7 @@
 
 <body>
     <div class="container">
+        <a href="./index.html">bosh saxifa</a>
         <main class="mani">
             <section class="main__input">
                 <div id="form">
