--- a/addimin.html
+++ b/addimin.html
@@ -14,7 +14,12 @@
 
 <body>
     <div class="container">
-        <a href="./index.html">bosh saxifa</a>
+
+        <header class="sitx__hedader">
+            <div>
+                <a class="hero_likn" href="./index.html">Bosh saxifa</a>
+            </div>
+        </header>
         <main class="mani">
             <section class="main__input">
                 <div id="form">
@@ -41,7 +46,6 @@
         <li class="cretelment__li" id="cretelment__li">
             <div class="cretelment__img__div">
                 <img id="cretelment__img" src="./img/Login.png" alt="book">
-                <!-- <input class="edit__input" type="text" placeholder="text"> -->
             </div>
             <div class="cretelment__div">
                 <h2 id="cretelment__inner" class="clor cretelment__inner">Python</h2>
