--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 <body>
     <div class="container">
+        <div>
+            <a href="./addimin.html">Admin</a>
+        </div>
         <header class="sitx__hedader">
             <div class="container header__conta">
                 <div class="container header__container">
@@ -34,7 +37,6 @@
                             <img class="header__mode" id="mon" src="./img/mon.svg" alt="mon">
                             <img class="header__mode" id="sun" src="./img/Vector.svg" alt="sun">
                         </div>
-                        <a href="./addimin.html">admin</a>
                         <div class="logo">
                             <button class=" header__logo">Logout</button>
                         </div>
