--- a/addimin.html
+++ b/addimin.html
@@ -15,9 +15,12 @@
 <body>
     <div class="container">
 
-        <header class="sitx__hedader">
+        <header class="admin__header">
             <div>
                 <a class="hero_likn" href="./index.html">Bosh saxifa</a>
+            </div>
+            <div class="logo">
+                <button class=" header__logo">Logout</button>
             </div>
         </header>
         <main class="mani">
