--- a/addimin.html
+++ b/addimin.html
@@ -20,7 +20,7 @@
                 <a class="hero_likn" href="./index.html">Bosh saxifa</a>
             </div>
             <div class="logo">
-                <button class=" header__logo">Logout</button>
+                <button class=" header__addimi">Logout</button>
             </div>
         </header>
         <main class="mani">
