--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </section>
             <section class="main__section2">
-                <div class="container">
+                <div class="container section2__div">
                     <ul class="cretElement" id="cretElement">
                     </ul>
                     <nav aria-label="Page navigation example">
